# footbal_matchdata_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
matchdata_utils/: __init__.py  compute_player_stats.py  explore_post.py  load_datasets.py  main.py
