[project]
name = "Technical-Assignment-Football-DE-Roy-Aswin"
version = "0.1.0"
description = "Sr Data Engineer, Technical Assignment"
authors = [{ name = "Aswin Jose Roy", email = "aswinjoseroy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.3.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["matchdata_utils"]
exclude = ["data", "tests"]